[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/Controls/Control.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/between_attack_menu/menu.gd" type="Script" id=2]
[ext_resource path="res://UI/between_attack_menu/menu_animation_player.gd" type="Script" id=3]
[ext_resource path="res://UI/Controls/ChoicePanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/between_attack_menu/AttackPanel.gd" type="Script" id=5]
[ext_resource path="res://UI/Controls/AttackArea/AttackArea.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=15]
resource_name = "hide_all"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Control/VBoxContainer/HBoxContainer/Kris:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 70 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/VBoxContainer/HBoxContainer/Susie:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 340, 70 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/VBoxContainer/HBoxContainer/Ralsei:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 680, 70 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "kris_turn"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Control/VBoxContainer/HBoxContainer/Kris:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 70 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "ralsei_turn"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Control/VBoxContainer/HBoxContainer/Ralsei:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 680, 70 ), Vector2( 680, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "susie_turn"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Control/VBoxContainer/HBoxContainer/Susie:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 340, 70 ), Vector2( 340, 0 ) ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 400.0
margin_right = 1025.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="Control" parent="." instance=ExtResource( 1 )]
visible = false
anchor_top = 1.0
anchor_right = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hide_all = SubResource( 15 )
anims/kris_turn = SubResource( 8 )
anims/ralsei_turn = SubResource( 14 )
anims/susie_turn = SubResource( 13 )
script = ExtResource( 3 )

[node name="DebugButtons" type="Control" parent="."]
margin_right = 160.0
margin_bottom = 50.0

[node name="KillJevilButton" type="Button" parent="DebugButtons"]
margin_left = 490.0
margin_top = 510.0
margin_right = 670.0
margin_bottom = 560.0
text = "KILL JEVIL"

[node name="KillSpamtonButton" type="Button" parent="DebugButtons"]
margin_left = 680.0
margin_top = 510.0
margin_right = 860.0
margin_bottom = 560.0
text = "KILL SPAMTON"

[node name="ItemButton" type="Button" parent="DebugButtons"]
margin_left = 430.0
margin_top = 410.0
margin_right = 610.0
margin_bottom = 460.0
text = "ITEM"

[node name="DefendButton" type="Button" parent="DebugButtons"]
margin_left = 830.0
margin_top = 410.0
margin_right = 1010.0
margin_bottom = 460.0
text = "DEFEND"

[node name="ActButton" type="Button" parent="DebugButtons"]
margin_left = 230.0
margin_top = 410.0
margin_right = 410.0
margin_bottom = 460.0
text = "ACT/MAGIC"

[node name="SpareButton" type="Button" parent="DebugButtons"]
margin_left = 630.0
margin_top = 410.0
margin_right = 810.0
margin_bottom = 460.0
text = "SPARE"

[node name="DescriptionLabel" type="Label" parent="DebugButtons"]
margin_left = 30.0
margin_top = 530.0
margin_right = 1010.0
margin_bottom = 590.0

[node name="AttackButton" type="Button" parent="DebugButtons"]
margin_left = 30.0
margin_top = 410.0
margin_right = 210.0
margin_bottom = 460.0
text = "ATTACK"

[node name="ChoicePanel" parent="." instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1.0
margin_bottom = 1.0

[node name="LetterTimer" type="Timer" parent="."]
wait_time = 0.04

[node name="AttackPanel" type="Control" parent="."]
visible = false
margin_left = 10.0
margin_top = 420.0
margin_right = 560.0
margin_bottom = 610.0
script = ExtResource( 5 )

[node name="Kris" parent="AttackPanel" instance=ExtResource( 6 )]
visible = false
margin_top = -10.0
margin_right = 406.0
margin_bottom = -96.0

[node name="Susie" parent="AttackPanel" instance=ExtResource( 6 )]
visible = false
margin_top = 50.0
margin_right = 406.0
margin_bottom = -36.0

[node name="Ralsei" parent="AttackPanel" instance=ExtResource( 6 )]
visible = false
margin_top = 110.0
margin_right = 406.0
margin_bottom = 24.0

[connection signal="button_down" from="DebugButtons/KillJevilButton" to="." method="_on_KillJevilButton_button_down"]
[connection signal="button_down" from="DebugButtons/KillSpamtonButton" to="." method="_on_KillSpamtonButton_button_down"]
[connection signal="button_down" from="DebugButtons/ItemButton" to="." method="_on_ItemButton_button_down"]
[connection signal="button_down" from="DebugButtons/DefendButton" to="." method="_on_DefendButton_button_down"]
[connection signal="button_down" from="DebugButtons/ActButton" to="." method="_on_ActButton_button_down"]
[connection signal="button_down" from="DebugButtons/SpareButton" to="." method="_on_SpareButton_button_down"]
[connection signal="button_down" from="DebugButtons/AttackButton" to="." method="_on_AttackButton_button_down"]
[connection signal="bar_finished" from="AttackPanel/Kris" to="AttackPanel" method="_on_bar_finished"]
[connection signal="bar_finished" from="AttackPanel/Susie" to="AttackPanel" method="_on_bar_finished"]
[connection signal="bar_finished" from="AttackPanel/Ralsei" to="AttackPanel" method="_on_bar_finished"]
